# trm-rust-libs

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix
.direnv/: nix-profile-.6495.e764fc9a4058  nix-profile-.6495.e764fc9a4058.rc
db/: Cargo.toml
db/src/: lib.rs
has-mqtt/: Cargo.toml
has-mqtt/src/: component.rs  device.rs  lib.rs  main.rs  mqtt_client.rs
has-mqtt/src/platform/: empty.rs  mod.rs  switch.rs
has-mqtt/src/platform/configs/: availability.rs  mod.rs
has-mqtt/src/platform/switch/: component.rs  state.rs
has-mqtt/src/platform/text/: component.rs  mod.rs  state.rs
hyper-services/: Cargo.toml
hyper-services/src/: commons.rs  cors.rs  generic_json_error.rs  lib.rs
hyper-services/src/request_processing/: mod.rs
hyper-services/src/response_building/: mod.rs
hyper-services/src/service/: certificates.rs  mod.rs  spawn.rs  stateful_service.rs  stateless_service.rs
hyper-services/src/web_socket/: mod.rs
hyper-trm/: Cargo.toml
hyper-trm/src/: commons.rs  generic_service.rs  lib.rs
hyper-trm/src/service/: stateful_service.rs  stateless_service.rs
mail/: Cargo.toml
mail/src/: lib.rs
websocket/: Cargo.toml
websocket/src/: lib.rs
