[package]
name = "hyper-services"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
hyper-util = { version = "^0.1", features = ["full"] }
http-body-util = "^0.1"
tokio-util = "^0"
futures-util = "^0"
trait-variant = "^0"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
base64 = "^0"